<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="24dp"
    android:background="@drawable/rounded_dialog"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/alert_text"
        android:textSize="24sp"
        android:textColor="@color/merah"
        android:padding="16dp"
        android:gravity="center"/>

    <TextView
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/akhirnya_kamu_telah_mendapatkan_nama_baru_nama_kamu_adalah_text"
        android:textSize="24sp"
        android:padding="16dp"
        android:layout_gravity="center"
        android:textAlignment="center"/>
    <TextView
        android:id="@+id/tv_nama"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:padding="16dp"
        android:layout_gravity="center"
        android:textAlignment="center"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_ok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/biru"
        android:text="@string/tutup_text"/>
</LinearLayout>