<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_cancelable_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancelable_dialog_text"
        android:backgroundTint="@color/biru"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        android:padding="12dp"
        app:cornerRadius="12dp"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_action_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_dialog_text"
        android:backgroundTint="@color/biru"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        android:padding="12dp"
        app:cornerRadius="12dp"
        app:layout_constraintTop_toBottomOf="@id/btn_cancelable_dialog" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_custom_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/custom_dialog_text"
        android:backgroundTint="@color/biru"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        android:padding="12dp"
        app:cornerRadius="12dp"
        app:layout_constraintTop_toBottomOf="@id/btn_action_dialog"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_fragment_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fragment_dialog_text"
        android:backgroundTint="@color/biru"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        android:padding="12dp"
        app:cornerRadius="12dp"
        app:layout_constraintTop_toBottomOf="@id/btn_custom_dialog"/>

</androidx.constraintlayout.widget.ConstraintLayout>